# Slack-Cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
docs/: SCOPES.md
scripts/: scope-setup.sh
src/: client.rs  credentials.rs  main.rs
src/commands/: api.rs  apps.rs  auth.rs  bookmarks.rs  bots.rs  calls.rs  chat.rs  conversations.rs  dnd.rs  emoji.rs  files.rs  mod.rs  pins.rs  reactions.rs  reminders.rs  search.rs  stars.rs  team.rs  usergroups.rs  users.rs  workflows.rs
