[package]
name = "slack-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Slack Web API CLI"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
