[package]
name = "cli-slack"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Slack Web API CLI"
license = "MIT"
repository = "https://github.com/Sankalpcreat/Slack-Cli"
homepage = "https://github.com/Sankalpcreat/Slack-Cli"
documentation = "https://github.com/Sankalpcreat/Slack-Cli#readme"

[[bin]]
name = "slack-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
